refactoring: to TZ 11